--- a/client/src/index.css
+++ b/client/src/index.css
@@ -357,3 +357,27 @@ input[type="number"] {
     align-items: center;
     padding: 3rem;
 }
+
+.bj-card {
+    width: 10vw;
+    height: 14vw;
+    background: no-repeat center center/cover;
+}
+
+.flex {
+    display: flex;
+}
+
+.circle {
+    box-shadow: black 0 0 5px 1px;
+    font-size: larger;
+    background: #e81e24;
+    color: white;
+    font-weight: 700;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
