--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: no-repeat center center/cover url(./Helpers/img/bg3.jpg);
+    background: no-repeat center center/cover url(./Helpers/img/bg3-min.jpg);
 }
 
 body::-webkit-scrollbar {
